fixed integration test dockerfile

--- a/coffee-service/integration_tests/infrastructure/Dockerfile
+++ b/coffee-service/integration_tests/infrastructure/Dockerfile
@@ -6,7 +6,7 @@ COPY go.* ./
 
 RUN go mod download
 
-COPY .. ./
+COPY ./ ./
 
 RUN chmod +x ./integration_tests/infrastructure/wait-for-it.sh ./integration_tests/infrastructure/docker-entrypoint.sh
 
