added nats message broker and event on coffee added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,17 @@ services:
       - "8080:8080"
     networks:
       - coffee-service-network
+    depends_on:
+      - nats
+  nats-server:
+    image: nats
+    ports:
+      - "4222:4222" # nats default port
+      - "8222:8222" # nats monitor port
+    command: "--name nats-server --http_port 8222"
+    networks:
+      - coffee-service-network
+
 networks:
   coffee-service-network:
     driver: bridge
