--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -2,19 +2,25 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: ['*']
+    tags: ['v*']
   pull_request:
-    branches: [ main ]
+    branches: ['*']
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-      
-    - name: Integration tests
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Download Dependencies
       run: |
-        make test
-        make integration
+        (cd coffee-service && go mod download)
+
+    - name: Unit tests
+      run: make test
+
+    - name: Integration tests
+      run:   make integration
