--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -2,25 +2,30 @@ name: CI
 
 on:
   push:
-    branches: ['*']
-    tags: ['v*']
+    branches: [ '*' ]
+    tags: [ 'v*' ]
   pull_request:
-    branches: ['*']
+    branches: [ '*' ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: "1.17.x"
 
-    - name: Download Dependencies
-      run: |
-        (cd coffee-service && go mod download)
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Unit tests
-      run: make test
+      - name: Download Dependencies
+        run: |
+          (cd coffee-service && go mod download)
 
-    - name: Integration tests
-      run:   make integration
+      - name: Unit tests
+        run: make test
+
+      - name: Integration tests
+        run: make integration
