--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -21,8 +21,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Download Dependencies
-        run: |
-          (cd coffee-service && go mod download)
+        run: make restore
 
       - name: Unit tests
         run: make test
