switched integration tests to be toggled by build tag instead of env variable

--- a/coffee-service/integration_tests/infrastructure/Dockerfile
+++ b/coffee-service/integration_tests/infrastructure/Dockerfile
@@ -10,10 +10,8 @@ COPY ./ ./
 
 RUN chmod +x ./integration_tests/infrastructure/wait-for-it.sh ./integration_tests/infrastructure/docker-entrypoint.sh $COFFEE_SERVICE_URL
 
-ENV INTEGRATION_TESTS=1
-
 ENTRYPOINT ["/app/integration_tests/infrastructure/docker-entrypoint.sh"]
 
 WORKDIR /app/integration_tests
 
-CMD ["go", "test", "-v", "./..."]
+CMD ["go", "test", "--tags=integration", "-v", "./..."]
