--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,25 @@ services:
       - BIND_ADDRESS=:80
       - NATS_ADDRESS=nats://nats:4222
     ports:
-      - "8080:80"
+      - "9000:80"
     networks:
       - coffee-service-network
     depends_on:
       - nats
+  order-service:
+    build:
+      context: ./order-service
+      dockerfile: Dockerfile
+    environment:
+      - BIND_ADDRESS=:80
+      - NATS_ADDRESS=nats://nats:4222
+    ports:
+      - "9001:80"
+    networks:
+      - coffee-service-network
+    depends_on:
+      - nats
+      - api
   nats:
     image: nats
     ports:
