--- a/docker-compose.integration.yml
+++ b/docker-compose.integration.yml
@@ -2,13 +2,13 @@ version: '3.4'
 services:
   test:
     build:
-      context: ./coffee-service
+      context: product-service
       dockerfile: integration_tests/infrastructure/Dockerfile
     environment:
       - WAIT_FOR=api:80
-      - COFFEE_SERVICE_URL=http://api:80
+      - PRODUCT_SERVICE_URL=http://product-service:80
       - NATS_ADDRESS=nats://nats:4222
     networks:
       - coffee-service-network
     depends_on:
-      - api
+      - product-service
