--- a/product-service/integration_tests/infrastructure/Dockerfile
+++ b/product-service/integration_tests/infrastructure/Dockerfile
@@ -1,12 +1,13 @@
 FROM golang:1.17 AS builder
 
+WORKDIR /config
+COPY ./config/ ./
+
 WORKDIR /app/
-
-COPY go.* ./
-
+COPY product-service/go.* ./
 RUN go mod download
 
-COPY ./ ./
+COPY ./product-service/ ./
 
 RUN chmod +x ./integration_tests/infrastructure/wait-for-it.sh ./integration_tests/infrastructure/docker-entrypoint.sh $PRODUCT_SERVICE_URL
 
