--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -1,12 +1,13 @@
 FROM golang:1.17-alpine AS builder
 
+# copy config over to ../config (relative to app) for local module replacements
+WORKDIR /config
+COPY ./config/ ./
+
 WORKDIR /app/
-
-COPY go.* ./
-
+COPY order-service/go.* ./
 RUN go mod download
-
-COPY ./ ./
+COPY ./order-service/ ./
 
 RUN go build -o order-service .
 
