wip implementation of mongo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,17 @@ services:
     networks:
       - coffee-service-network
 
+  product-service-db:
+    image: mongo
+    restart: always
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: venti
+    networks:
+      - coffee-service-network
+
 networks:
   coffee-service-network:
     driver: bridge
