--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -24,7 +24,7 @@ jobs:
         run: make restore
 
       - name: Unit tests
-        run: make test
+        run: make unit
 
       - name: Integration tests
         run: make integration
