--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Unit tests
         run: make unit
 
-      - name: Integration tests
-        run: make integration
+#      - name: Integration tests
+#        run: make integration
